[package]
name = "rsynth"
version = "0.1.0"
authors = ["Robin Forbes <rsforbes0@gmail.com>"]
edition = "2018"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "*" }
crossbeam = "*"
petgraph = { version = "*"}
num = "*"
crossterm = { version = "*", features = ["event-stream"]}
tui = { version = "*", default-features = false, features = ['crossterm'] }